update notebooks to split code into diff. cells

--- a/notebooks/Accessing-S3-via-SageMaker-notebooks.ipynb
+++ b/notebooks/Accessing-S3-via-SageMaker-notebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "398df880",
+   "id": "03f42740",
    "metadata": {},
    "source": [
     "---\n",
@@ -45,9 +45,16 @@
     "\n",
     "3. **Set Up an S3 Client**: Using `boto3`, we'll initialize an S3 client for accessing S3 buckets directly. This client enables us to handle data storage, retrieve datasets, and manage files in S3, which will be essential as we work through various machine learning tasks.\n",
     "\n",
-    "Starting with these initializations prepares our notebook environment to efficiently interact with AWS resources for model development, data management, and deployment.\n",
-    "\n",
-    "```python\n",
+    "Starting with these initializations prepares our notebook environment to efficiently interact with AWS resources for model development, data management, and deployment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c03a0d83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import boto3\n",
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
@@ -62,10 +69,14 @@
     "print(f\"Execution Role: {role_name}\")  # Displays the IAM role being used\n",
     "bucket_names = [bucket[\"Name\"] for bucket in s3.list_buckets()[\"Buckets\"]]\n",
     "print(f\"Available S3 Buckets: {bucket_names}\")  # Shows the default S3 bucket assigned to SageMaker\n",
-    "print(f\"AWS Region: {session.boto_region_name}\")  # Prints the region where the SageMaker session is running\n",
-    "\n",
-    "```\n",
-    "\n",
+    "print(f\"AWS Region: {session.boto_region_name}\")  # Prints the region where the SageMaker session is running"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94a68823",
+   "metadata": {},
+   "source": [
     "## Reading data from S3\n",
     "\n",
     "You can either (A) read data from S3 into memory or (B) download a copy of your S3 data into your notebook instance. Since we are using SageMaker notebooks as controllers—rather than performing training or tuning directly in the notebook—the best practice is to **read data directly from S3** whenever possible. However, there are cases where downloading a local copy may be useful. We'll show you both strategies.\n",
@@ -85,9 +96,16 @@
     "- **Potential latency**: Reading large datasets repeatedly from S3 may introduce small delays. This approach works best if you only need to load data once or infrequently.\n",
     "\n",
     "#### Example: Reading data from S3 into memory\n",
-    "Our data is stored on an S3 bucket called 'name-titanic-s3' (e.g., doejohn-titanic-s3). We can use the following code to read data directly from S3 into memory in the Jupyter notebook environment, without actually downloading a copy of train.csv as a local file.\n",
-    "\n",
-    "```python\n",
+    "Our data is stored on an S3 bucket called 'name-titanic-s3' (e.g., doejohn-titanic-s3). We can use the following code to read data directly from S3 into memory in the Jupyter notebook environment, without actually downloading a copy of train.csv as a local file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b2cb752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "# Define the S3 bucket and object key\n",
     "bucket_name = 'doejohn-titanic-s3'  # replace with your S3 bucket name\n",
@@ -107,10 +125,15 @@
     "print(test_data.shape)\n",
     "\n",
     "# Inspect the first few rows of the DataFrame\n",
-    "train_data.head()\n",
-    "```\n",
-    "\n",
-    "    sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af7368e8",
+   "metadata": {},
+   "source": [
+    "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
     "    sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
     "    (712, 12)\n",
     "    (179, 12)\n",
@@ -129,18 +152,30 @@
     "- **Consumes instance storage**: Notebook instances have limited space.\n",
     "- **Requires manual cleanup**: Downloaded files remain until deleted.\n",
     "\n",
-    "#### Example\n",
-    "\n",
-    "```python\n",
+    "#### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad0ee7b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define the S3 bucket and file location\n",
     "key = \"titanic_train.csv\"  # Path to your file in the S3 bucket\n",
     "local_file_path = \"./titanic_train.csv\"  # Local path to save the file\n",
     "\n",
     "# Initialize the S3 client and download the file\n",
     "s3.download_file(bucket_name, key, local_file_path)\n",
-    "!ls\n",
-    "```\n",
-    "\n",
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427296f8",
+   "metadata": {},
+   "source": [
     "**Note**: You may need to hit refresh on the file explorer panel to the left to see this file. If you get any permission issues...\n",
     "\n",
     "* check that you have selected the appropriate policy for this notebook\n",
@@ -155,9 +190,16 @@
     "2. **Size calculation**: We sum the `Size` attribute of each object in the bucket.\n",
     "3. **Unit conversion**: The size is given in bytes, so dividing by `1024 ** 2` converts it to megabytes (MB).\n",
     "\n",
-    "> **Note**: If your bucket has very large objects or you want to check specific folders within a bucket, you may want to refine this code to only fetch certain objects or folders.\n",
-    "\n",
-    "```python\n",
+    "> **Note**: If your bucket has very large objects or you want to check specific folders within a bucket, you may want to refine this code to only fetch certain objects or folders."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8646841",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Initialize the total size counter (bytes)\n",
     "total_size_bytes = 0\n",
     "\n",
@@ -181,10 +223,15 @@
     "print(f\"Total size of bucket '{bucket_name}': {total_size_mb:.2f} MB\")\n",
     "\n",
     "# Print the total size in GB\n",
-    "#print(f\"Total size of bucket '{bucket_name}': {total_size_gb:.2f} GB\")\n",
-    "```\n",
-    "\n",
-    "    Total size of bucket 'myawesometeam-titanic': 0.06 MB\n",
+    "#print(f\"Total size of bucket '{bucket_name}': {total_size_gb:.2f} GB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60f05cfc",
+   "metadata": {},
+   "source": [
+    "Total size of bucket 'doejohn-titanic-s3': 0.06 MB\n",
     "\n",
     "\n",
     "### Using helper functions from lesson repo\n",
@@ -193,34 +240,78 @@
     "**Note**: Make sure you have already forked the lesson repo as described on the [setup page](https://uw-madison-datascience.github.io/ML_with_Amazon_SageMaker/#workshop-repository-setup). Replace \"username\" below with your GitHub username.\n",
     "\n",
     "#### Directory setup\n",
-    "Let's make sure we're starting in the root directory of this instance, so that we all have our AWS_helpers.py file located in the same path (/test_AWS/scripts/AWS_helpers.py)\n",
+    "Let's make sure we're starting in the root directory of this instance, so that we all have our AWS_helpers.py file located in the same path (/test_AWS/scripts/AWS_helpers.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a649a066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /home/ec2-user/SageMaker/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17950cfd",
+   "metadata": {},
+   "source": [
+    "/home/ec2-user/SageMaker\n",
     "\n",
-    "```python\n",
-    "%cd /home/ec2-user/SageMaker/\n",
-    "```\n",
-    "\n",
-    "    /home/ec2-user/SageMaker\n",
-    "\n",
-    "To clone the repo to our Jupyter notebook, use the following code, adjusting username to your GitHub username.\n",
-    "```python\n",
-    "!git clone https://github.com/username/AWS_helpers.git # downloads AWS_helpers folder/repo (refresh file explorer to see)\n",
-    "```\n",
-    "\n",
-    "Our AWS_helpers.py file can be found in `AWS_helpers/helpers.py`. With this file downloaded, you can call this function via...\n",
-    "\n",
-    "```python\n",
+    "To clone the repo to our Jupyter notebook, use the following code, adjusting username to your GitHub username."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66b4befd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/username/AWS_helpers.git # downloads AWS_helpers folder/repo (refresh file explorer to see)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aebbc893",
+   "metadata": {},
+   "source": [
+    "Our AWS_helpers.py file can be found in `AWS_helpers/helpers.py`. With this file downloaded, you can call this function via..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e96bba65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import AWS_helpers.helpers as helpers\n",
-    "helpers.get_s3_bucket_size(bucket_name)\n",
-    "```\n",
-    "\n",
-    "    {'size_mb': 0.060057640075683594, 'size_gb': 5.865003913640976e-05}\n",
+    "helpers.get_s3_bucket_size(bucket_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6203e7cf",
+   "metadata": {},
+   "source": [
+    "{'size_mb': 0.060057640075683594, 'size_gb': 5.865003913640976e-05}\n",
     "\n",
     "### Check storage costs of bucket\n",
     "To estimate the storage cost of your Amazon S3 bucket directly from a Jupyter notebook in SageMaker, you can use the following approach. This method calculates the total size of the bucket and estimates the monthly storage cost based on AWS S3 pricing.\n",
     "\n",
-    "**Note**: AWS S3 pricing varies by region and storage class. The example below uses the S3 Standard storage class pricing for the US East (N. Virginia) region as of November 1, 2024. Please verify the current pricing for your specific region and storage class on the [AWS S3 Pricing page](https://aws.amazon.com/s3/pricing/).\n",
-    "\n",
-    "```python\n",
+    "**Note**: AWS S3 pricing varies by region and storage class. The example below uses the S3 Standard storage class pricing for the US East (N. Virginia) region as of November 1, 2024. Please verify the current pricing for your specific region and storage class on the [AWS S3 Pricing page](https://aws.amazon.com/s3/pricing/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b21847b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# AWS S3 Standard Storage pricing for US East (N. Virginia) region\n",
     "# Pricing tiers as of November 1, 2024\n",
     "first_50_tb_price_per_gb = 0.023  # per GB for the first 50 TB\n",
@@ -242,24 +333,38 @@
     "           ((total_size_gb - 500 * 1024) * over_500_tb_price_per_gb)\n",
     "\n",
     "print(f\"Estimated monthly storage cost: ${cost:.4f}\")\n",
-    "print(f\"Estimated annual storage cost: ${cost*12:.4f}\")\n",
+    "print(f\"Estimated annual storage cost: ${cost*12:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5de095c7",
+   "metadata": {},
+   "source": [
+    "Estimated monthly storage cost: $0.0000\n",
     "\n",
-    "```\n",
     "\n",
-    "    Estimated monthly storage cost: $0.0000\n",
-    "\n",
-    "\n",
-    "For your convenience, we have also added this code to a helper function.\n",
-    "\n",
-    "\n",
-    "```python\n",
+    "For your convenience, we have also added this code to a helper function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91bcd67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "monthly_cost, storage_size_gb = helpers.calculate_s3_storage_cost(bucket_name)\n",
     "print(f\"Estimated monthly cost ({storage_size_gb:.4f} GB): ${monthly_cost:.5f}\")\n",
-    "print(f\"Estimated annual cost ({storage_size_gb:.4f} GB): ${monthly_cost*12:.5f}\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "    Estimated monthly cost (0.0001 GB): $0.00000\n",
+    "print(f\"Estimated annual cost ({storage_size_gb:.4f} GB): ${monthly_cost*12:.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1bf00b9",
+   "metadata": {},
+   "source": [
+    "Estimated monthly cost (0.0001 GB): $0.00000\n",
     "    Estimated annual cost (0.0001 GB): $0.00002\n",
     "\n",
     "**Important Considerations**:\n",
@@ -271,24 +376,42 @@
     "For detailed and up-to-date information on AWS S3 pricing, please refer to the [AWS S3 Pricing page](https://aws.amazon.com/s3/pricing/).\n",
     "\n",
     "## Writing output files to S3\n",
-    "As your analysis generates new files, you can upload files to your bucket as demonstrated below. For this demo, you can create a blank `results.txt` file to upload to your bucket. To do so, go to **File** -> **New** -> **Text file**, and save it out as `results.txt`.\n",
-    "\n",
-    "```python\n",
+    "As your analysis generates new files, you can upload files to your bucket as demonstrated below. For this demo, you can create a blank `results.txt` file to upload to your bucket. To do so, go to **File** -> **New** -> **Text file**, and save it out as `results.txt`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "411c41c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define the S3 bucket name and the file paths\n",
     "train_file_path = \"results.txt\" # assuming your file is in root directory of jupyter notebook (check file explorer tab)\n",
     "\n",
     "# Upload the training file to a new folder called \"results\". You can also just place it in the bucket's root directory if you prefer (remove results/ in code below).\n",
     "s3.upload_file(train_file_path, bucket_name, \"results/results.txt\")\n",
     "\n",
-    "print(\"Files uploaded successfully.\")\n",
+    "print(\"Files uploaded successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e0cd91d",
+   "metadata": {},
+   "source": [
+    "Files uploaded successfully.\n",
     "\n",
-    "```\n",
-    "\n",
-    "    Files uploaded successfully.\n",
-    "\n",
-    "After uploading, we can view the objects/files available on our bucket using...\n",
-    "\n",
-    "```python\n",
+    "After uploading, we can view the objects/files available on our bucket using..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a956c50f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# List and print all objects in the bucket\n",
     "response = s3.list_objects_v2(Bucket=bucket_name)\n",
     "\n",
@@ -297,18 +420,34 @@
     "    for obj in response['Contents']:\n",
     "        print(obj['Key'])  # Print the object's key (its path in the bucket)\n",
     "else:\n",
-    "    print(\"The bucket is empty or does not exist.\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "Alternatively, we can substitute this for a helper function call as well.\n",
-    "\n",
-    "```python\n",
+    "    print(\"The bucket is empty or does not exist.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22110c2b",
+   "metadata": {},
+   "source": [
+    "Alternatively, we can substitute this for a helper function call as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ea30aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file_list = helpers.list_S3_objects(bucket_name)\n",
-    "file_list\n",
-    "```\n",
-    "\n",
-    "   ['results/results.txt', 'titanic_test.csv', 'titanic_train.csv']\n",
+    "file_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5452dc43",
+   "metadata": {},
+   "source": [
+    "['results/results.txt', 'titanic_test.csv', 'titanic_train.csv']\n",
     "\n",
     "\n",
     ":::::::::::::::::::::::::::::::::::::: keypoints \n",
@@ -317,7 +456,7 @@
     "- Periodically check storage usage and costs to manage S3 budgets.\n",
     "- Use SageMaker to upload analysis results and maintain an organized workflow.\n",
     "\n",
-    "::::::::::::::::::::::::::::::::::::::::::::::::\n"
+    "::::::::::::::::::::::::::::::::::::::::::::::::"
    ]
   }
  ],
