--- a/notebooks/Interacting-with-code-repo.ipynb
+++ b/notebooks/Interacting-with-code-repo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9fc302d0",
+   "id": "d5c9d95d",
    "metadata": {},
    "source": [
     "---\n",
@@ -34,12 +34,25 @@
     "\n",
     "2. Start a new Jupyter notebook, and name it something along the lines of \"Interacting-with-git.ipynb\". We can use the standard conda_python3 environment since we aren't doing any training/tuning just yet.\n",
     "\n",
-    "3. Let's make sure we're starting at the same directory. Cd to the root directory of this instance before going further.\n",
-    "\n",
-    "```python\n",
-    "%cd /home/ec2-user/SageMaker/\n",
-    "```\n",
-    "    /home/ec2-user/SageMaker\n",
+    "3. Let's make sure we're starting at the same directory. Cd to the root directory of this instance before going further."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7441a51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /home/ec2-user/SageMaker/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad419483",
+   "metadata": {},
+   "source": [
+    "/home/ec2-user/SageMaker\n",
     "    \n",
     "## Step 1: Using a GitHub personal access token (PAT) to push/pull from a SageMaker notebook\n",
     "When working in SageMaker notebooks, you may often need to push code updates to GitHub repositories. However, SageMaker notebooks are typically launched with temporary instances that don’t persist configurations, including SSH keys, across sessions. This makes HTTPS-based authentication, secured with a GitHub Personal Access Token (PAT), a practical solution. PATs provide flexibility for authentication and enable seamless interaction with both public and private repositories directly from your notebook. \n",
@@ -61,28 +74,52 @@
     "> **Caution**: Treat your PAT like a password. Avoid sharing it or exposing it in your code. Store it securely (e.g., via a password manager like LastPass) and consider rotating it regularly.\n",
     "\n",
     "#### Use `getpass` to prompt for username and PAT\n",
-    "The `getpass` library allows you to input your GitHub username and PAT without exposing them in the notebook. This approach ensures you’re not hardcoding sensitive information.\n",
-    "\n",
-    "```python\n",
+    "The `getpass` library allows you to input your GitHub username and PAT without exposing them in the notebook. This approach ensures you’re not hardcoding sensitive information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64b7068d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import getpass\n",
     "\n",
     "# Prompt for GitHub username and PAT securely\n",
     "username = input(\"GitHub Username: \")\n",
-    "token = getpass.getpass(\"GitHub Personal Access Token (PAT): \")\n",
-    "```\n",
-    "\n",
+    "token = getpass.getpass(\"GitHub Personal Access Token (PAT): \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08efdaf7",
+   "metadata": {},
+   "source": [
     "**Note**: After running, you may want to comment out the above code so that you don't have to enter in your login every time you run your whole notebook\n",
     "\n",
     "## Step 2: Configure Git settings\n",
     "In your SageMaker or Jupyter notebook environment, run the following commands to set up your Git user information.\n",
     "\n",
-    "Setting this globally (`--global`) will ensure the configuration persists across all repositories in the environment. If you’re working in a temporary environment, you may need to re-run this configuration after a restart.\n",
-    "\n",
-    "```python\n",
+    "Setting this globally (`--global`) will ensure the configuration persists across all repositories in the environment. If you’re working in a temporary environment, you may need to re-run this configuration after a restart."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8950f64d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!git config --global user.name \"Your name\" # This is your GitHub username (or just your name), which will appear in the commit history as the author of the changes.\n",
-    "!git config --global user.email your_email@wisc.edu # This should match the email associated with your GitHub account so that commits are properly linked to your profile.\n",
-    "```\n",
-    "\n",
+    "!git config --global user.email your_email@wisc.edu # This should match the email associated with your GitHub account so that commits are properly linked to your profile."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "470de55d",
+   "metadata": {},
+   "source": [
     "## Step 3: Convert json .ipynb files to .py\n",
     "We'd like to track our notebook files within our AWS_helpers fork. However, to avoid tracking ipynb files directly, which are formatted as json, we may want to convert our notebook to .py first (plain text). Converting notebooks to `.py` files helps maintain code (and version-control) readability and minimizes potential issues with notebook-specific metadata in Git history. \n",
     "\n",
@@ -93,22 +130,56 @@
     "\n",
     "Here’s how to convert `.ipynb` files to `.py` in SageMaker without needing to export or download files.\n",
     "\n",
-    "1. First, install Jupytext.\n",
-    "```python\n",
-    "!pip install jupytext\n",
-    "```\n",
-    "\n",
-    "2. Then, run the following command in a notebook cell to convert both of our notebooks to `.py` files\n",
-    "```python\n",
+    "1. First, install Jupytext."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7701b17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install jupytext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "861eae1b",
+   "metadata": {},
+   "source": [
+    "2. Then, run the following command in a notebook cell to convert both of our notebooks to `.py` files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b1f633",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Adjust filename(s) if you used something different\n",
-    "!jupytext --to py Interacting-with-S3.ipynb\n",
-    "```\n",
-    "    [jupytext] Reading Interacting-with-S3.ipynb in format ipynb\n",
+    "!jupytext --to py Interacting-with-S3.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29a7f31d",
+   "metadata": {},
+   "source": [
+    "[jupytext] Reading Interacting-with-S3.ipynb in format ipynb\n",
     "    [jupytext] Writing Interacting-with-S3.py\n",
     "\n",
-    "3. If you have multiple notebooks to convert, you can automate the conversion process by running this code, which converts all `.ipynb` files in the current directory to `.py` files:\n",
-    "\n",
-    "```python\n",
+    "3. If you have multiple notebooks to convert, you can automate the conversion process by running this code, which converts all `.ipynb` files in the current directory to `.py` files:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8df7386d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import subprocess\n",
     "import os\n",
     "\n",
@@ -119,27 +190,55 @@
     "for notebook in notebooks:\n",
     "    output_file = notebook.replace('.ipynb', '.py')\n",
     "    subprocess.run([\"jupytext\", \"--to\", \"py\", notebook, \"--output\", output_file])\n",
-    "    print(f\"Converted {notebook} to {output_file}\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "For convenience, we have placed this code inside a `convert_files()` function in `helpers.py`.\n",
-    "\n",
-    "```python\n",
+    "    print(f\"Converted {notebook} to {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7fc3a26",
+   "metadata": {},
+   "source": [
+    "For convenience, we have placed this code inside a `convert_files()` function in `helpers.py`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b9c3e30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import AWS_helpers.helpers as helpers\n",
-    "helpers.convert_files(direction=\"notebook_to_python\")\n",
-    "```\n",
-    "\n",
+    "helpers.convert_files(direction=\"notebook_to_python\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e4cf5c9",
+   "metadata": {},
+   "source": [
     "**Once converted, we can move our .py files to the AWS_helpers folder using the file explorer panel in Jupyter Lab.**\n",
     "\n",
     "## Step 4. Add and commit .py files\n",
     "\n",
-    "1. Check status of repo. Make sure you're in the repo folder before running the next step.\n",
-    "\n",
-    "```python\n",
-    "!git status\n",
-    "```\n",
-    "\n",
+    "1. Check status of repo. Make sure you're in the repo folder before running the next step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb45ca96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f048b12",
+   "metadata": {},
+   "source": [
     "On branch main\n",
     "Your branch is up to date with 'origin/main'.\n",
     "\n",
@@ -150,20 +249,44 @@
     "\n",
     "nothing added to commit but untracked files present (use \"git add\" to track)\n",
     "\n",
-    "2. Add and commit changes\n",
-    "\n",
-    "```python\n",
+    "2. Add and commit changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b720656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!git add . # you may also add files one at a time, for further specificity over the associated commit message\n",
-    "!git commit -m \"Updates from Jupyter notebooks\" # in general, your commit message should be more specific!\n",
-    "\n",
-    "```\n",
-    "\n",
-    "3. Check status\n",
-    "\n",
-    "```python\n",
-    "!git status\n",
-    "```\n",
-    "    On branch main\n",
+    "!git commit -m \"Updates from Jupyter notebooks\" # in general, your commit message should be more specific!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "855d0612",
+   "metadata": {},
+   "source": [
+    "3. Check status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7801d6c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acbb847e",
+   "metadata": {},
+   "source": [
+    "On branch main\n",
     "    Your branch is ahead of 'origin/main' by 1 commit.\n",
     "      (use \"git push\" to publish your local commits)\n",
     "    \n",
@@ -176,10 +299,17 @@
     "Here’s how to add `.ipynb` files to `.gitignore` to ignore them project-wide:\n",
     "\n",
     "1. **Cd to git repo folder**\n",
-    "    First make sure we're in the repo folder\n",
-    "    \n",
-    "    ```python\n",
-    "    %cd AWS_helpers\n",
+    "    First make sure we're in the repo folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "359ed8dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd AWS_helpers\n",
     "    ```\n",
     "\n",
     "2. **Create the `.gitignore` file**:\n",
@@ -248,19 +378,39 @@
     "    - **Use if**: You only want to pull updates if no additional commits have been made locally. This can be helpful to avoid unintended merges when your branch hasn’t diverged.\n",
     "\n",
     "#### Recommended for Most Users\n",
-    "If you’re collaborating and want simplicity, **merge (pull.rebase false)** is often the most practical option. This will ensure you get remote changes with a merge commit that captures the history of integration points. For those who prefer a more streamlined history and are comfortable with Git, **rebase (pull.rebase true)** can be ideal but may require more careful conflict handling.\n",
-    "\n",
-    "```python\n",
+    "If you’re collaborating and want simplicity, **merge (pull.rebase false)** is often the most practical option. This will ensure you get remote changes with a merge commit that captures the history of integration points. For those who prefer a more streamlined history and are comfortable with Git, **rebase (pull.rebase true)** can be ideal but may require more careful conflict handling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74319bb4",
+   "metadata": {},
+   "source": [
+    "python\n",
     "!git config pull.rebase false # Combines the remote changes into your local branch as a merge commit.\n",
-    "!git pull origin main\n",
-    "```\n",
-    "    From https://github.com/qualiaMachine/AWS_helpers\n",
+    "!git pull origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0a3e078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "From https://github.com/qualiaMachine/AWS_helpers\n",
     "     * branch            main       -> FETCH_HEAD\n",
     "    Already up to date.\n",
     "\n",
-    "If you get merge conflicts, be sure to resolve those before moving forward (e.g., use git checkout -> add -> commit). You can skip the below code if you don't have any conflicts. \n",
-    "\n",
-    "```python\n",
+    "If you get merge conflicts, be sure to resolve those before moving forward (e.g., use git checkout -> add -> commit). You can skip the below code if you don't have any conflicts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca1b4167",
+   "metadata": {},
+   "source": [
+    "python\n",
     "# Keep your local changes in one conflicting file\n",
     "# !git checkout --ours Interacting-with-git.py\n",
     "\n",
@@ -271,17 +421,38 @@
     "# !git add Interacting-with-git.py\n",
     "\n",
     "# # Commit the merge result\n",
-    "# !git commit -m \"Resolved merge conflicts by keeping local changes\"\n",
-    "```\n",
-    "\n",
-    "### 2. Push changes using PAT creditials \n",
-    "\n",
-    "```python\n",
+    "# !git commit -m \"Resolved merge conflicts by keeping local changes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3162b3da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 2. Push changes using PAT creditials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf893d98",
+   "metadata": {},
+   "source": [
+    "python\n",
     "# Push with embedded credentials from getpass (avoids interactive prompt)\n",
     "github_url = 'github.com/username/AWS_helpers.git' # replace username with your own. THe full address for your fork can be found under Code -> Clone -> HTTPS (remote the https:// before the rest of the address)\n",
-    "!git push https://{username}:{token}@{github_url} main\n",
-    "```\n",
-    "\tEnumerating objects: 6, done.\n",
+    "!git push https://{username}:{token}@{github_url} main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a336cf85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Enumerating objects: 6, done.\n",
     "\tCounting objects: 100% (6/6), done.\n",
     "\tDelta compression using up to 2 threads\n",
     "\tCompressing objects: 100% (5/5), done.\n",
@@ -296,25 +467,57 @@
     "\n",
     "Let's assume you've taken a short break from your work, and others on your team have made updates to your .py files on the remote main branch. If you'd like to work with notebook files again, you can again use jupytext to convert your `.py` files back to `.ipynb`. \n",
     "\n",
-    "1. First, pull any updates from the remote main branch.\n",
-    "\n",
-    "```python\n",
+    "1. First, pull any updates from the remote main branch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c5ceafd",
+   "metadata": {},
+   "source": [
+    "python\n",
     "!git config pull.rebase false # Combines the remote changes into your local branch as a merge commit.\n",
-    "!git pull origin main\n",
-    "```\n",
-    "\n",
+    "!git pull origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91fc6021",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "2. We can then use jupytext again to convert in the other direction (.py to .ipynb).\n",
-    "This command will create `Interacting-with-S3.ipynb` in the current directory, converting the Python script to a Jupyter Notebook format. Jupytext handles the conversion gracefully without expecting the `.py` file to be in JSON format.\n",
-    "\n",
-    "```python\n",
+    "This command will create `Interacting-with-S3.ipynb` in the current directory, converting the Python script to a Jupyter Notebook format. Jupytext handles the conversion gracefully without expecting the `.py` file to be in JSON format."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36b80ee8",
+   "metadata": {},
+   "source": [
+    "python\n",
     "# Replace 'your_script.py' with your actual filename\n",
-    "!jupytext --to notebook Interacting-with-S3.py --output Interacting-with-S3.ipynb\n",
-    "```\n",
-    "\n",
+    "!jupytext --to notebook Interacting-with-S3.py --output Interacting-with-S3.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d84b594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### Applying to all .py files\n",
-    "To convert all of your .py files to notebooks, you can use our helper function as follows\n",
-    "\n",
-    "```python\n",
+    "To convert all of your .py files to notebooks, you can use our helper function as follows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3985c5eb",
+   "metadata": {},
+   "source": [
+    "python\n",
     "helpers.convert_files(direction=\"python_to_notebook\")\n",
     "```\n",
     "\n",
@@ -326,7 +529,7 @@
     "- Converting `.ipynb` files to `.py` files helps with cleaner version control and easier review of changes.\n",
     "- Adding `.ipynb` files to `.gitignore` keeps your repository organized and reduces storage.\n",
     "\n",
-    "::::::::::::::::::::::::::::::::::::::::::::::::\n"
+    "::::::::::::::::::::::::::::::::::::::::::::::::"
    ]
   }
  ],
