--- a/notebooks/Training-models-in-SageMaker-notebooks-part2.ipynb
+++ b/notebooks/Training-models-in-SageMaker-notebooks-part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c656080",
+   "id": "451e7ee6",
    "metadata": {},
    "source": [
     "---\n",
@@ -29,9 +29,16 @@
     "::::::::::::::::::::::::::::::::::::::::::::::::\n",
     "\n",
     "## Initial setup\n",
-    "To keep things organized, you may wish to open a fresh jupyter notebook (pytorch environment). Name your notebook something along the lines of, \"Training-part2.ipynb\". Once your notebook is open, we can setup our SageMaker controller as usual:\n",
-    "\n",
-    "```python\n",
+    "To keep things organized, you may wish to open a fresh jupyter notebook (pytorch environment). Name your notebook something along the lines of, \"Training-part2.ipynb\". Once your notebook is open, we can setup our SageMaker controller as usual:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd7f2143",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import boto3\n",
     "import pandas as pd\n",
     "import sagemaker\n",
@@ -52,18 +59,37 @@
     "\n",
     "# Define train/test filenames\n",
     "train_filename = 'titanic_train.csv'\n",
-    "test_filename = 'titanic_test.csv'\n",
-    "```\n",
-    "\n",
-    "We should also record our local instance information to report this information during testing.\n",
-    "\n",
-    "```python\n",
+    "test_filename = 'titanic_test.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94ec5767",
+   "metadata": {},
+   "source": [
+    "We should also record our local instance information to report this information during testing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bf35ae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import AWS_helpers.helpers as helpers\n",
     "notebook_instance_name = 'MyAwesomeTeam-ChrisEndemann-Titanic-Train-Tune-Xgboost-NN'\n",
     "local_instance_info = helpers.get_notebook_instance_info(notebook_instance_name)\n",
     "local_instance = local_instance_info['InstanceType']\n",
-    "local_instance\n",
-    "````\n",
+    "local_instance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427acf2a",
+   "metadata": {},
+   "source": [
+    "`\n",
     "\n",
     "    'ml.t3.medium'\n",
     "\n",
@@ -95,9 +121,16 @@
     "   `.npz` files support storage of multiple arrays within a single file. This is helpful for organizing features and labels without additional code. Here, the `train_data.npz` file contains both `X_train` and `y_train`, keeping everything related to training data in one place. Similarly, `val_data.npz` organizes validation features and labels, simplifying file management.\n",
     "\n",
     "In summary, saving the data in `.npz` files ensures a smooth workflow from data loading to model training in PyTorch, leveraging SageMaker's infrastructure for a more efficient, structured training process.\n",
-    ":::::::::::::::::::::::::::::::::::::::\n",
-    "\n",
-    "```python\n",
+    ":::::::::::::::::::::::::::::::::::::::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dde223af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
@@ -128,14 +161,24 @@
     "\n",
     "# Save the preprocessed data to our local jupyter environment\n",
     "np.savez('train_data.npz', X_train=X_train, y_train=y_train)\n",
-    "np.savez('val_data.npz', X_val=X_val, y_val=y_val)\n",
-    "\n",
-    "```\n",
-    "\n",
-    "Next, we will upload our compressed files to our S3 bucket. Storage is farily cheap on AWS (around $0.023 per GB per month), but be mindful of uploading too much data. It may be convenient to store a preprocessed version of the data, just don't store too many versions that aren't being actively used.\n",
-    "\n",
-    "\n",
-    "```python\n",
+    "np.savez('val_data.npz', X_val=X_val, y_val=y_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9e5d8fd",
+   "metadata": {},
+   "source": [
+    "Next, we will upload our compressed files to our S3 bucket. Storage is farily cheap on AWS (around $0.023 per GB per month), but be mindful of uploading too much data. It may be convenient to store a preprocessed version of the data, just don't store too many versions that aren't being actively used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b902904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import boto3\n",
     "\n",
     "train_file = \"train_data.npz\"  # Local file path in your notebook environment\n",
@@ -148,18 +191,28 @@
     "s3.upload_file(train_file, bucket_name, f\"{train_file}\")\n",
     "s3.upload_file(val_file, bucket_name, f\"{val_file}\")\n",
     "\n",
-    "print(\"Files successfully uploaded to S3.\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "    Files successfully uploaded to S3.\n",
+    "print(\"Files successfully uploaded to S3.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04a04664",
+   "metadata": {},
+   "source": [
+    "Files successfully uploaded to S3.\n",
     "\n",
     "\n",
     "## Testing on notebook instance\n",
-    "You should always test code thoroughly before scaling up and using more resources. Here, we will test our script using a small number of epochs — just to verify our setup is correct.\n",
-    "\n",
-    "\n",
-    "```python\n",
+    "You should always test code thoroughly before scaling up and using more resources. Here, we will test our script using a small number of epochs — just to verify our setup is correct."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1e30052",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "import time as t # Measure training time locally\n",
     "\n",
@@ -168,18 +221,27 @@
     "\n",
     "start_time = t.time()\n",
     "%run  AWS_helpers/train_nn.py --train train_data.npz --val val_data.npz --epochs {epochs} --learning_rate {learning_rate}\n",
-    "print(f\"Local training time: {t.time() - start_time:.2f} seconds, instance_type = {local_instance}\")\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n",
+    "print(f\"Local training time: {t.time() - start_time:.2f} seconds, instance_type = {local_instance}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9ae16f9",
+   "metadata": {},
+   "source": [
     "## Deploying PyTorch neural network via SageMaker\n",
     "Now that we have tested things locally, we can try to train with a larger number of epochs and a better instance selected. We can do this easily by invoking the PyTorch estimator. Our notebook is currently configured to use ml.m5.large. We can upgrade this to `ml.m5.xlarge` with the below code (using our notebook as a controller). \n",
     "\n",
-    "**Should we use a GPU?**: Since this dataset is farily small, we don't necessarily need a GPU for training. Considering costs, the m5.xlarge is `$0.17/hour`, while the cheapest GPU instance is `$0.75/hour`. However, for larger datasets (> 1 GB) and models, we may want to consider a GPU if training time becomes cumbersome (see [Instances for ML](https://docs.google.com/spreadsheets/d/1uPT4ZAYl_onIl7zIjv5oEAdwy4Hdn6eiA9wVfOBbHmY/edit?usp=sharing). If that doesn't work, we can try distributed computing (setting instance > 1). More on this in the next section.\n",
-    "\n",
-    "\n",
-    "```python\n",
+    "**Should we use a GPU?**: Since this dataset is farily small, we don't necessarily need a GPU for training. Considering costs, the m5.xlarge is `$0.17/hour`, while the cheapest GPU instance is `$0.75/hour`. However, for larger datasets (> 1 GB) and models, we may want to consider a GPU if training time becomes cumbersome (see [Instances for ML](https://docs.google.com/spreadsheets/d/1uPT4ZAYl_onIl7zIjv5oEAdwy4Hdn6eiA9wVfOBbHmY/edit?usp=sharing). If that doesn't work, we can try distributed computing (setting instance > 1). More on this in the next section."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e853541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sagemaker.pytorch import PyTorch\n",
     "from sagemaker.inputs import TrainingInput\n",
     "\n",
@@ -214,11 +276,15 @@
     "pytorch_estimator.fit({\"train\": train_input, \"val\": val_input})\n",
     "end = t.time()\n",
     "\n",
-    "print(f\"Runtime for training on SageMaker: {end - start:.2f} seconds, instance_type: {instance_type}, instance_count: {instance_count}\")\n",
-    "\n",
-    "```\n",
-    "    \n",
-    "    2024-11-03 21:27:03 Uploading - Uploading generated training model\n",
+    "print(f\"Runtime for training on SageMaker: {end - start:.2f} seconds, instance_type: {instance_type}, instance_count: {instance_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "594feec0",
+   "metadata": {},
+   "source": [
+    "2024-11-03 21:27:03 Uploading - Uploading generated training model\n",
     "    2024-11-03 21:27:03 Completed - Training job completed\n",
     "    Training seconds: 135\n",
     "    Billable seconds: 135\n",
@@ -239,17 +305,29 @@
     "\n",
     "#### Enabling PyTorch to use GPU in `train_nn.py`  \n",
     "\n",
-    "The following code snippet to enables GPU support in `train_nn.py`:\n",
-    "\n",
-    "```python\n",
+    "The following code snippet to enables GPU support in `train_nn.py`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37e7c51b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "\n",
     "# Set device\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "```\n",
-    "\n",
-    "\n",
-    "```python\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2916e6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sagemaker.pytorch import PyTorch\n",
     "from sagemaker.inputs import TrainingInput\n",
     "import time as t\n",
@@ -284,11 +362,15 @@
     "start = t.time()\n",
     "pytorch_estimator_gpu.fit({\"train\": train_input, \"val\": val_input})\n",
     "end = t.time()\n",
-    "print(f\"Runtime for training on SageMaker: {end - start:.2f} seconds, instance_type: {instance_type}, instance_count: {instance_count}\")\n",
-    "\n",
-    "```\n",
-    "    \n",
-    "    2024-11-03 21:33:56 Uploading - Uploading generated training model\n",
+    "print(f\"Runtime for training on SageMaker: {end - start:.2f} seconds, instance_type: {instance_type}, instance_count: {instance_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa844876",
+   "metadata": {},
+   "source": [
+    "2024-11-03 21:33:56 Uploading - Uploading generated training model\n",
     "    2024-11-03 21:33:56 Completed - Training job completed\n",
     "    Training seconds: 350\n",
     "    Billable seconds: 350\n",
@@ -311,9 +393,16 @@
     "::::::::::::::::::::::::::::::::::::::::::::::::::::::\n",
     "\n",
     "## Distributed Training for Neural Networks in SageMaker\n",
-    "In the event that you do need distributed computing to achieve reasonable train times (remember to try an upgraded instance first!), simply adjust the instance count to a number between 2 and 5. Beyond 5 instances, you'll see diminishing returns and may be needlessly spending extra money/compute-energy.\n",
-    "\n",
-    "```python\n",
+    "In the event that you do need distributed computing to achieve reasonable train times (remember to try an upgraded instance first!), simply adjust the instance count to a number between 2 and 5. Beyond 5 instances, you'll see diminishing returns and may be needlessly spending extra money/compute-energy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5ff84ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sagemaker.pytorch import PyTorch\n",
     "from sagemaker.inputs import TrainingInput\n",
     "import time as t\n",
@@ -349,11 +438,15 @@
     "pytorch_estimator.fit({\"train\": train_input, \"val\": val_input})\n",
     "end = t.time()\n",
     "\n",
-    "print(f\"Runtime for training on SageMaker: {end - start:.2f} seconds, instance_type: {instance_type}, instance_count: {instance_count}\")\n",
-    "\n",
-    "```\n",
-    "    \n",
-    "    2024-11-03 21:36:35 Uploading - Uploading generated training model\n",
+    "print(f\"Runtime for training on SageMaker: {end - start:.2f} seconds, instance_type: {instance_type}, instance_count: {instance_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d0bdfd3",
+   "metadata": {},
+   "source": [
+    "2024-11-03 21:36:35 Uploading - Uploading generated training model\n",
     "    2024-11-03 21:36:47 Completed - Training job completed\n",
     "    Training seconds: 228\n",
     "    Billable seconds: 228\n",
@@ -389,7 +482,7 @@
     "- **SageMaker configuration**: By adjusting instance counts and types, SageMaker supports scalable training setups. Starting with CPU training and scaling as needed with GPUs or distributed setups allows for performance optimization.\n",
     "- **Testing locally first**: Before deploying large-scale training in SageMaker, test locally with a smaller setup to ensure code correctness and efficient resource usage.\n",
     "\n",
-    "::::::::::::::::::::::::::::::::::::::::::::::::\n"
+    "::::::::::::::::::::::::::::::::::::::::::::::::"
    ]
   }
  ],
